Fix spacing

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -33,7 +33,7 @@ h2 {
 .contact {
   display: flex;
   list-style: none;
-  padding: 0;
+  padding: 0.5em 0 0 0;
   margin: 0;
 }
 .contact-item {
